# shroudb-sdk-python

./: .gitignore  AGENTS.md  LICENSE  README.md  compatibility.json  pyproject.toml
.github/workflows/: publish.yml
shroudb/: README.md  __init__.py  client.py  errors.py  pyproject.toml
shroudb-auth/: README.md  pyproject.toml
shroudb-auth/shroudb_auth/: __init__.py  client.py  errors.py  types.py
shroudb-courier/: README.md  pyproject.toml
shroudb-courier/shroudb_courier/: __init__.py  _connection.py  _pipeline.py  _pool.py  client.py  errors.py  types.py
shroudb-keep/: README.md  pyproject.toml
shroudb-keep/shroudb_keep/: __init__.py  _connection.py  _pipeline.py  _pool.py  client.py  errors.py  types.py
shroudb-mint/: README.md  pyproject.toml
shroudb-mint/shroudb_mint/: __init__.py  _connection.py  _pipeline.py  _pool.py  client.py  errors.py  types.py
shroudb-pulse/: README.md  pyproject.toml
shroudb-pulse/shroudb_pulse/: __init__.py  _connection.py  _pipeline.py  _pool.py  client.py  errors.py  types.py
shroudb-sentry/: README.md  pyproject.toml
shroudb-sentry/shroudb_sentry/: __init__.py  _connection.py  _pipeline.py  _pool.py  client.py  errors.py  types.py
shroudb-transit/: README.md  pyproject.toml
shroudb-transit/shroudb_transit/: __init__.py  _connection.py  _pipeline.py  _pool.py  client.py  errors.py  types.py
shroudb/_transport/: __init__.py  _http.py  _interface.py  _resp3.py
shroudb/engines/: __init__.py  chronicle.py  cipher.py  courier.py  forge.py  keep.py  scroll.py  sentry.py  shroudb.py  sigil.py  stash.py  veil.py
(+19 files in other folders)
