[project]
name = "shroudb"
version = "0.1.0"
description = "Python SDK for ShrouDB — typed clients for all engines"
requires-python = ">=3.10"
license = "MIT OR Apache-2.0"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shroudb*"]
